--- a/src/custom.scss
+++ b/src/custom.scss
@@ -20,3 +20,9 @@ body,
 .v-main {
   background: #f7f7f7;
 }
+
+.v-data-table>.v-data-table__wrapper>table>tbody>tr:hover:not(.v-data-table__expanded__content):not(.v-data-table__empty-wrapper) {
+  background: #ff781b !important;
+  color: white;
+  cursor: pointer;
+}
