--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,8 +1,9 @@
+$primary: #ff9800;
+
 h1,
 h2,
 h3 {
   font-family: "Raleway", sans;
-  //font-size: 2em;
   line-height: 1em;
   font-weight: 400;
 }
@@ -22,7 +23,7 @@ body,
 }
 
 .v-data-table>.v-data-table__wrapper>table>tbody>tr:hover:not(.v-data-table__expanded__content):not(.v-data-table__empty-wrapper) {
-  background: #ff781b !important;
+  background: $primary !important;
   color: white;
   cursor: pointer;
 }
