--- a/src/custom.scss
+++ b/src/custom.scss
@@ -22,7 +22,11 @@ body,
   background: #f7f7f7;
 }
 
-.v-data-table>.v-data-table__wrapper>table>tbody>tr:hover:not(.v-data-table__expanded__content):not(.v-data-table__empty-wrapper) {
+.v-data-table
+  > .v-data-table__wrapper
+  > table
+  > tbody
+  > tr:hover:not(.v-data-table__expanded__content):not(.v-data-table__empty-wrapper) {
   background: $primary !important;
   color: white;
   cursor: pointer;
